@@ -16,6 +16,7 @@
  * GNU General Public License for more details.
  */
 import { Component, Input, OnInit } from '@angular/core';
+import * as _ from 'lodash';
 
 import { DashboardWidgetConfig } from '~/app/core/components/dashboard/models/dashboard-widget-config.model';
 
@@ -41,6 +42,9 @@ export class DashboardWidgetValueComponent implements OnInit {
   }
 
   protected sanitizeConfig() {
-    this.config.hideTitle = true;
+    _.defaultsDeep(this.config, {
+      hideTitle: true,
+      reloadPeriod: 10000
+    });
   }
 }
