@@ -1,6 +1,7 @@
 openmediavault (7.3.1-1) stable; urgency=low
 
-  * 
+  * Fix the error of automatic reloading of several dashboard widgets,
+    e.g. the system time widget.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 29 Jun 2024 18:37:56 +0200
 
